--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -24,6 +24,7 @@
     "vue": ">=2.6.11"
   },
   "dependencies": {
+    "resize-observer-polyfill": ">=1.5.1",
     "rxjs": ">=6.5.5"
   },
   "devDependencies": {
