--- a/.travis.yml
+++ b/.travis.yml
@@ -48,10 +48,7 @@ branches:
 
 # condition https://stackoverflow.com/questions/34591587/travis-conditional-on-branch-after-success
 after_success:
-  - if [[ "$TRAVIS_TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+(\-[0-9]+)?$ ]]; 
-    then echo "Running build" && npm run ci:deploy-before;
-    else echo "Ignore build";
-    fi
+  - npm run ci:deploy-before
 
 deploy:
   # 배포 설정 - github page
@@ -62,7 +59,6 @@ deploy:
     github_token: $GITHUB_PAGES_TOKEN
     on:
       all_branches: true
-      condition: $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+(\-[0-9]+)?$ # tag - v0.0.0 이 있는 경우만 publish
 
   # 배포 설정 - npm module
   - provider: npm
